<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/aa_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:background="@drawable/products"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/aa_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="16dp"
                android:textStyle="bold"
                android:text="@string/item_name"
               android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingLeft="16dp"
                android:textStyle="bold"
                android:text="@string/item_location"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/aa_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_description"
                android:padding="10dp"
                android:paddingStart="16dp"
                android:paddingLeft="16sp"
              android:textColor="@color/black"
               android:fontFamily="sans-serif"
                android:textSize="12sp"
                />

            <Button
                android:id="@+id/logIn_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/buttonshape"
                android:text="@string/contact_owner"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                />

        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>