<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/strokes">

            <TextView
                android:text="@string/instruction"
                android:textSize="14sp"
                android:textColor="@color/secondary_text_light"
                android:padding="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <LinearLayout
            android:layout_margin="10dp"
            android:padding="9dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/post_image"
                android:layout_width="150dp"
                android:layout_margin="5dp"
                android:background="@drawable/strokes_inner"
                android:layout_height="100dp"
                android:src="@drawable/image_icon"
                />
            <TextView
                android:id="@+id/choose_image_text"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textAlignment="gravity"
                android:textStyle="bold"
                android:textSize="14sp"
                android:background="@drawable/strokes_inner"
                android:textColor="@color/colorPrimary"
                android:text="@string/chose_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="8dp"
            android:background="@drawable/imageborder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description_upload"
                android:textSize="18sp"
                android:minLines="6"
                android:maxLines="10"
                android:hint="@string/description"
                android:padding="10dp"
                android:textAlignment="gravity"
                android:gravity="top"
                android:textAllCaps="false"
                android:cursorVisible="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:background="@drawable/imageborder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/location_upload"
                android:textSize="15sp"
                android:hint="@string/location"
                android:padding="10dp"
                android:textAlignment="gravity"
                android:gravity="top"
                android:cursorVisible="true"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
           android:orientation="horizontal">

            <TextView
                android:id="@+id/upload_lat"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="top"
                android:text="latitudes"
                android:padding="10dp"
                android:textAlignment="gravity"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/upload_long"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="top"
                android:text="longitudes"
                android:padding="10dp"
                android:textAlignment="gravity"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="100dp">
            <fragment
                android:id="@+id/map_upload"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>

        <Button
            android:id="@+id/upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            />


    </LinearLayout>

</ScrollView>


